[gd_scene load_steps=2 format=3 uid="uid://bpqrx2yywnbhb"]

[ext_resource type="Script" path="res://scripts/CurrencyUI.gd" id="1_currency_ui"]

[node name="CurrencyUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 80.0
grow_horizontal = 0
script = ExtResource("1_currency_ui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoldContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="GoldIcon" type="Label" parent="Panel/VBoxContainer/GoldContainer"]
layout_mode = 2
text = "ðŸ’° Gold:"
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/VBoxContainer/GoldContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GemsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="GemsIcon" type="Label" parent="Panel/VBoxContainer/GemsContainer"]
layout_mode = 2
text = "ðŸ’Ž Gems:"
vertical_alignment = 1

[node name="GemsLabel" type="Label" parent="Panel/VBoxContainer/GemsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
